Add day-filtered hard words with extensions